# snappretty

./: CHANGELOG.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
pkg/archlinux/: PKGBUILD  snappretty.desktop
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/Annotations/: AnnotationLayer.tsx
src/components/Canvas/: BeautifyCanvas.tsx  DropZone.tsx
src/components/Sidebar/: TopBar.tsx
src/components/Toolbar/: Toolbar.tsx
src/hooks/: useCanvas.ts  useImageLoader.ts
src/stores/: useStore.ts
src/utils/: canvas.ts  export.ts  redaction.ts
