[package]
name = "snappretty"
version = "0.1.0"
description = "Cross-platform screenshot beautifier"
authors = ["megatih"]
license = "MIT"
repository = "https://github.com/megatih/snappretty"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "snappretty_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
